--- a/client/src/styles/Events.css
+++ b/client/src/styles/Events.css
@@ -1,7 +1,6 @@
 .events-table {
     border-collapse: collapse;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    overflow: auto;
     max-width: 300px;
 }
 .events-container{
