--- a/client/src/styles/Grades.css
+++ b/client/src/styles/Grades.css
@@ -72,7 +72,7 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 1rem;
-    overflow: auto;
+  
 }
 
  .grades-container table thead {
