--- a/client/src/styles/Schedule.css
+++ b/client/src/styles/Schedule.css
@@ -79,15 +79,10 @@
     background-color: rgba(28, 79, 167, 0.872);
 }
 
-.schedule-table-wrapper {
-    overflow: auto;
-}
 
 .schedule-table {
-  
     width: 100%;
     border-collapse: collapse;
-    overflow: auto;
 }
 
 .schedule-table th,
