--- a/client/src/styles/Subjects.css
+++ b/client/src/styles/Subjects.css
@@ -49,7 +49,7 @@
 .subject-table {
     width: 100%;
     border-collapse: collapse;
-    overflow: auto;
+
 }
 
 .subject-table th,
